# HEC-NLP-AWB

./: pyproject.toml
Exercises-Exercices/week1-semaine1/: week1.ipynb
Exercises-Exercices/week2-semaine2/: week2-preprocessing.ipynb
Exercises-Exercices/week3-semaine3/: week3-new-ngrams-solutions.ipynb  week3-new-ngrams.ipynb
