[project]
name = "hec-nlp"
version = "0.1.0"
description = "NLP course repository for HEC Montreal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colbert-ai>=0.2.22",
    "datasets==4.*",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.7.0",
    "nltk>=3.9.2",
    "numpy<2.0",
    "pandas>=2.3.3",
    "pyarrow==17.*,<18",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.7.0",
    "spacy>=3.8.11",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "transformers>=4.57.3",
    "gensim>=4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
